使用 Colaboratory 建立

--- a/呂怡葳_Week2_練習作業.ipynb
+++ b/呂怡葳_Week2_練習作業.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "呂怡葳-Week2-練習作業.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPoVJz0OQwrg8QBCjWZzXo8",
+      "authorship_tag": "ABX9TyPfB67Tjp0rVZUB+3pIAz+U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,15 +71,35 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "7c_5dWH9U8Fp"
+        "id": "0iAHSVzjY6QW"
       },
       "source": [
         ""
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZHCNDkmXY-Oe"
+      },
+      "source": [
+        "Google Colab操作步驟\r\n",
+        "Step1:\r\n",
+        "Step2:\r\n",
+        "Steo3:\r\n",
+        "回家練習"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oE6C8m-WYiJU"
+      },
+      "source": [
+        ""
+      ]
     }
   ]
 }
